feat: todo object added

--- a/src/pages/todos/index.astro
+++ b/src/pages/todos/index.astro
@@ -1,5 +1,5 @@
 ---
-import Todo from "../../components/Todo.svelte";
+import TodoView from "../../components/TodoView.svelte";
 import Layout from "../../layouts/Layout.astro";
 ---
 
@@ -7,8 +7,6 @@ import Layout from "../../layouts/Layout.astro";
     <h1 class="text-center text-2xl page">Todos page</h1>
 
     <div class="flex flex-col items-center justify-center content-center">
-        <Todo client:load />
-        <Todo client:load />
-        <Todo client:load />
+        <TodoView client:load />
     </div>
 </Layout>
