--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 import NavBar from "../components/NavBar.astro";
 import NavLink from "../components/NavLink.astro";
 
@@ -21,6 +22,7 @@ console.log("current path: ", currentPath);
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
 	<body>
 		<NavBar>
