--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,7 @@ import NavBar from "../components/NavBar.astro";
 import NavLink from "../components/NavLink.astro";
 
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -15,31 +15,36 @@ console.log("current path: ", currentPath);
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-		<ViewTransitions />
-	</head>
-	<body>
-		<NavBar>
-			<NavLink link="/" text="Home" active={currentPath === "/"} />
-			<NavLink
-				link="/about"
-				text="About"
-				active={currentPath.includes("/about")}
-			/>
-			<NavLink
-				link="/todos"
-				text="Todos"
-				active={currentPath.includes("/todos")}
-			/>
-		</NavBar>
-		<main class="mt-4 flex flex-col justify-center items-center">
-			<slot />
-		</main>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+    <ViewTransitions />
+  </head>
+  <body>
+    <NavBar>
+      <NavLink link="/" text="Home" active={currentPath === "/"} />
+      <NavLink
+        link="/about"
+        text="About"
+        active={currentPath.includes("/about")}
+      />
+      <NavLink
+        link="/todos"
+        text="Todos"
+        active={currentPath.includes("/todos")}
+      />
+      <NavLink
+        link="/blog"
+        text="Blog"
+        active={currentPath.includes("/blog")}
+      />
+    </NavBar>
+    <main class="mt-4 flex flex-col justify-center items-center">
+      <slot />
+    </main>
+  </body>
 </html>
